fix: top align pic container on tablet and large

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -322,6 +322,7 @@ footer {
   #audio-pic-container {
     flex: 1;
     width: 50%;
+    padding-top: 10px;
   }
 
   img {
@@ -334,7 +335,7 @@ footer {
 @media screen and (min-width: 1024px) {
   #audio-pic-container {
     padding: 20px;
-    margin-top: 40px;
+    margin-top: 0;
   }
 
   #text-container {
